--- a/JS/DOM Project/style.css
+++ b/JS/DOM Project/style.css
@@ -45,11 +45,10 @@ a:active {
 }
 
 /* cl title */
-#first {
+#textTitle {
   text-align: center;
   font-size: 50px;
   padding-top: 50px;
-  padding-bottom: 30px;
   color: rgb(245, 245, 245);
 }
 
@@ -60,11 +59,10 @@ a:active {
 }
 /*input*/
 .input {
-  width: 85%;
-  height: 20px;
+  width: 80%;
+  height: 10px;
   font-size: 18px;
   padding: 18px;
-  margin-top: 0;
   background-color: rgb(250, 240, 230);
 }
 
@@ -73,12 +71,13 @@ a:active {
   text-align: center;
   display: flex;
   width: 500px;
-  margin: auto;
+  margin: 10px auto;
 }
 
 /*button*/
 #btn {
   margin: 0;
+  font-size: 18px;
   width: 50px;
   padding: 10px;
   background-color: rgb(255, 140, 0);
