--- a/JS/Sudoku/style.css
+++ b/JS/Sudoku/style.css
@@ -4,11 +4,12 @@
 #root {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 30px;
+  margin-left: 40px;
 }
 .field {
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   border: 1px solid black;
   font-size: 30px;
   font-weight: 500;
@@ -19,7 +20,7 @@
 }
 
 #sudokuField {
-  width: 900px;
+  width: 550px;
   display: flex;
   flex-wrap: wrap;
 }
