--- a/JS/Fetch/class/style.css
+++ b/JS/Fetch/class/style.css
@@ -29,7 +29,7 @@ body {
 .countries {
   /* margin-bottom: 8rem; */
   display: flex;
-
+  flex-wrap: wrap;
   font-size: 2rem;
   opacity: 0;
   transition: opacity 1s;
@@ -50,7 +50,7 @@ body {
   width: 100%;
   position: absolute;
   top: -4rem;
-
+  display: flex;
   text-align: center;
   font-size: 1.8rem;
   font-weight: 600;
