--- a/React/project/src/style/header.css
+++ b/React/project/src/style/header.css
@@ -16,27 +16,27 @@ a {
   color: rgb(78, 75, 75);
 }
 
-.list {
+header .list {
   color: #ccc;
 }
 
-form {
+header form {
   width: 50%;
   padding: 16px;
 }
-input {
+header input {
   width: 50%;
 }
-img {
+header img {
   width: 20px;
 }
-.image {
+header .image {
   display: none;
 }
-li {
+header li {
   padding: 16px;
 }
-li:hover {
+header li:hover {
   background-color: #ccc;
 }
 @media screen and (max-width: 2400px) and (min-width: 800px) {
@@ -44,7 +44,11 @@ li:hover {
     margin-left: 4%;
   }
 }
+
 @media screen and (max-width: 800px) {
+  header li {
+    padding-left: 0;
+  }
   form {
     display: none;
   }
